<?xml version="1.0"?>
<package format="3">
  <name>ecat-master-future</name>
  <version>1.0.0</version>
  <description>ECAT master future shared-memory utilities.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.deluchi@iit.it">Manuel DELUCHI</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>