<?xml version="1.0"?>
<package format="3">
  <name>advrf_cyclonedds_lib</name>
  <version>0.1.0</version>
  <description>Builds CycloneDDS and CycloneDDS-CXX from source and exposes a CMake wrapper target.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.delucchi@iit.it">Manuel DELUCCHI</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>