<?xml version="1.0"?>
<package format="3">
  <name>advrf_cyclonedds_plugin</name>
  <version>0.1.0</version>
  <description>ECAT plugin implementation using CycloneDDS.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.delucchi@iit.it">Manuel delucchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <!-- <depend>CycloneDDS</depend>
  <depend>CycloneDDS-CXX</depend> -->
  <depend>advrf_interfaces_dds</depend>
  <depend>advrf_interfaces_protobuf</depend>
  <depend>advrf_middleware_core</depend>
  <depend>ecat_master_future</depend>
  <depend>advrf_cyclonedds_lib</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>