<?xml version="1.0"?>
<package format="3">
  <name>advrf_fastdds_plugin</name>
  <version>0.1.0</version>
  <description>Fast DDS plugin for ecat-middleware-advr.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.delucchi@iit.it">Manuel delucchi</maintainer>
  <license>TODO</license>

  <depend>advrf_fastdds_lib</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>