<?xml version="1.0"?>
<package format="3">
  <name>advrf_middleware_core</name>
  <version>0.1.0</version>
  <description>ADVRF middleware core CMake interface package.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.delucchi@iit.it">Manuel delucchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>advrf_interfaces_protobuf</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
