<?xml version="1.0"?>
<package format="3">
  <name>tools_shm_debug</name>
  <version>0.1.0</version>
  <description>SHM debug tools.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.deluchi@iit.it">Manuel DELUCHI</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>advrf_interfaces_protobuf</depend>
  <depend>advrf_middleware_core</depend>
  <depend>ecat_master_future</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>